Revert "切换到分代 ZGC，并减小线程堆栈内存空间"
This reverts commit 16a2bb34